Emulator only available in dev mode (its assets also no longer precompile). Nicer expand/collapse on emulator - remembered in localstorage, and auto-expands on Rails error pages

--- a/app/assets/stylesheets/mxit_rails/emulator.css.scss
+++ b/app/assets/stylesheets/mxit_rails/emulator.css.scss
@@ -13,7 +13,7 @@ html, body {
   margin: 35px auto 0 auto;
   position: relative;
 }
-#phone.collapse {
+.collapse #phone {
   background: none;
   position: absolute;
   top: 37px;
@@ -31,7 +31,7 @@ html, body {
   position: relative;
   overflow: hidden;
 }
-#phone.collapse #screen {
+.collapse #screen {
   position: static;
   width: 100%;
   height: 100%;
@@ -49,7 +49,7 @@ iframe {
   position: absolute;
   z-index: 1;
 }
-#phone.collapse .content {
+.collapse .content {
   width: 100%;
   height: 100%;
 }
@@ -145,28 +145,20 @@ a.link {
   left: -1px;
   position: relative;
 }
+.home .icon .image {
+  background-size: 21px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+}
 
-#phone-links {
-  position: absolute;
-  display: block;
-  right: 19px;
-  top: 27px;
-  z-index: 10;
-  width: 90px;
-  height: 40px;
-  text-align: right;
-}
-#phone.collapse #phone-links {
-  right: 1px;
-  top: 5px;
-}
 #collapse {
   display: none;
 }
-#phone.collapse #expand {
+.collapse #expand {
   display: none;
 }
-#phone.collapse #collapse {
+.collapse #collapse {
   display: inline;
 }
 
@@ -180,7 +172,7 @@ a.link {
   line-height: 30px;
   margin-top: 10px;
 }
-#phone.collapse #phone-input {
+.collapse #phone-input {
   position: fixed;
   bottom: 5px;
   left: 5px;
@@ -200,4 +192,7 @@ a.link {
   right: 0;
   background: -webkit-linear-gradient(90deg, #fff 0%, #fff 5%, rgba(255,255,255,0.95) 15%, rgba(255,255,255,0) 100%);;
   z-index: 10;
+}
+.collapse #fadeout {
+  display: none;
 }
